# dlog

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.paper  Dockerfile.sim  Dockerfile.velocity  README.md  cloud.command  cloudbuild.api.yaml  cloudbuild.sim.yaml  dlog.command  dlog.domains.command  dlog.gold.command  dlog.toml  docker-compose.yml  omega_wand.zsh  refold.command  tmp-local-tick.json  unfold.command  wand  wand.loop.command
.gcloud/: .last_survey_prompt.yaml  .last_update_check.json  access_tokens.db  credentials.db  hidden_gcloud_config_universe_descriptor_data_cache_configs.db
.gcloud-tmp/: .last_survey_prompt.yaml  .last_update_check.json  access_tokens.db  credentials.db
.gcloud-tmp/configurations/: config_default
.gcloud/configurations/: config_default
api/: Cargo.toml
api/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
corelib/: Cargo.toml
corelib/src/: lib.rs  shaless.rs
crates/omega_speakers/: Cargo.toml
dashboard/: dashboard;status
dlog-sim-api/: Cargo.toml  README.md
dlog-sim-api/src/: gcs.rs  main.rs  model.rs  sim.rs
dlog_gold_http/: Cargo.toml
dlog_gold_http/src/: main.rs  omega.rs
dlog_http4_client/: Cargo.toml
dlog_http4_client/src/: main.rs
docs/: 8x8-engine.md  browser-node.txt  canon-spec-v2-golden-wallet-stack.md  clear-linux-cloud-init.md  cloud-run.md  debian-cloud-init.md  dns-zones.md  hypercube.md  paper-plugin-java8-skeleton.md  physics-cannon.rs  rust-cloud-run-axum-skeleton.md  sim-api.md  void-world-setup.md
flames/: flames;control  speaker;leidenfrost
k8s/: dlog-api-deployment.yaml  dlog-api-service.yaml
k8s/paper-188/: deployment.yaml  service-2.yaml  (+7 more)
kube/: hello-universe.yaml
omega/: Cargo.toml
omega_bank/: Cargo.toml
omega_speakers/: Cargo.toml
paper-sim-plugin/: pom.xml
paper-void-plugin/: pom.xml
presence_service/: Cargo.toml
presence_service/src/: main.rs
sky/: Cargo.toml  sky;manifest  sky;stream  sky;timeline
spec/: Cargo.toml
stack/: ariavault.json  aroundthemoonschain.json  aroundthesunchain.json  aroundtheworldchain.json  arrowchain.json  barrierblockchain.json  block1.json  block_break_range_8.json  block_build_range_8.json  blocks_3d.json  blocks_chain_3d.json  boatchain.json  brick.json  btcchain.json  buildchain.json  capechain.json  carpetchain.json  ccorp_chain.json  chain_8d.json  circlechain.json  color_blocks.json  coordmapchain.json  coords_chain.json  coords_mapping.json  createchain.json  diamond_lock.json  diamondblockchain.json  dns;router  dogechain.json  donotworrychain.json  doorchain.json  earthchain.json  emerald_lock.json  emeraldblockchain.json  emeraldchain.json  explorechain.json  falling_forwardchain.json  falling_upward_chain.json  fire_blocks.json  firechain.json  (+71 more)
tmp-velocity/: Dockerfile  forwarding.secret  velocity.toml
vault/: omega_vault.enc  omega_vault.enc.sha512  wallet;plan.genesis
∞/: 9∞.txt  ;∞;∞;∞;∞;∞;∞;∞;∞;∞;
(+33 files in other folders)
