[workspace]
members = [
    "omega_speakers",
    "dlog_gold_http",
    "dlog_http4_client",
    "corelib",
    "spec",
    "presence_service",
    "sky",
    "api",
    "omega_bank",
    "omega",
]
resolver = "1"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
