[package]
name = "dlog-api"
version = "0.6.6"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dlog-spec = { path = "../spec" }
dlog-corelib = { path = "../corelib" }
dlog-core = { path = "../core" }
dlog-sky = { path = "../sky" }
