[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "DLOG Ω HTTP API (health + spec endpoints)"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
spec = { path = "../spec" }
corelib = { path = "../corelib" }
futures = "0.3"
